log
Thu Apr 16 05:35:50 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
97fbcd0
Thu Apr 16 06:28:30 PM UTC 2026: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:48:19: error: ‘HasMap’ undeclared (first use in this function); did you mean ‘HashMap’?
   48 |     HashMap *map=(HasMap*)malloc(sizeof(HashMap));
      |                   ^~~~~~
      |                   HashMap
hashmap.c:48:19: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:48:26: error: expected expression before ‘)’ token
   48 |     HashMap *map=(HasMap*)malloc(sizeof(HashMap));
      |                          ^
c402724
Thu Apr 16 06:29:59 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
0e012f0
Thu Apr 16 07:10:21 PM UTC 2026: 
 tests:  1|6
total_score: 5/60
04b991c
Thu Apr 16 08:22:53 PM UTC 2026: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 20/60
01ab90d
Thu Apr 16 08:23:26 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c9ff609
Thu Apr 16 08:23:49 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
51867a8
Thu Apr 16 08:27:50 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
d5ed050
Thu Apr 16 08:29:20 PM UTC 2026: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|5
total_score: 15/60
2c0a0d1
Sun Apr 19 06:56:57 PM UTC 2026: 
 hashmap.c | 19 ++++++++++++++-----
 1 file changed, 14 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘searchMap’:
hashmap.c:94:73: error: array subscript is not an integer
   94 |         if((map->buckets[indice]->key != NULL) && (is_equal(map->buckets[index]->key, key))){
      |                                                                         ^
8b9980b
Sun Apr 19 07:14:23 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 30/60
8aa8c0b
